--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Alexander Gurevich's Portfolio - Full-Stack Developer showcasing projects and skills in modern web development." />
+    <meta name="keywords" content="Alexander Gurevich, Portfolio, Full-Stack Developer, Web Development, Projects, JavaScript, HTML, CSS, React, Node.js" />
     <link rel="stylesheet" href="./style/style.css" />
-    <script src="https://kit.fontawesome.com/6afaa9116a.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/6afaa9116a.js" defer crossorigin="anonymous"></script>
     <title>AG Portfolio</title>
 </head>
 
